syntax = "proto3";

package UploadPackage;

option go_package = ".";

service Upload {

  rpc UploadImage(UploadImageRequest) returns (UploadImageResponse);

  rpc GetAllMedia(GetAllMediaRequest) returns (GetAllMediaResponse);

}

message UploadImageRequest {
  bytes image = 1;
  string  filename = 2;
}

message UploadImageResponse {
  string imageUrl = 1;
}

message GetAllMediaRequest {
}

message GetAllMediaResponse {
  repeated Image media = 1;
}

message Image {
  string url = 1;
}